--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,27 @@
 .main-container {
-  min-height: 100vh;
-  min-height: 100dvh;
+  background-color: #fafafa;
   display: grid;
   grid-template-rows: auto 1fr auto;
+  min-height: 100vh;
+  min-height: 100dvh;
+}
+
+.press-start-font {
+  font-family: "Press Start 2P", cursive;
+}
+
+.icon {
+  font-size: 2.25rem;
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
 }
