--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .main-container {
-  background-color: #fafafa;
+  background: #fafafa;
   display: grid;
   grid-template-rows: auto 1fr auto;
   min-height: 100vh;
