--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -55,3 +55,13 @@
 .free-shipping-text span {
   margin-right: 0.5rem;
 }
+
+.navbar-link {
+  text-decoration: none;
+  color: inherit;
+}
+
+.navbar-link:hover {
+  text-decoration: none;
+  color: inherit;
+}
