--- a/src/components/Loading/Loading.module.css
+++ b/src/components/Loading/Loading.module.css
@@ -1,43 +1,44 @@
 .container {
-  margin: 0;
-  display: flex;
-  justify-content: center;
   align-items: center;
-  height: 60%;
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  margin: 0;
+  width: 100%;
 }
 
 .pokemon {
-  position: relative;
-  height: 100px;
-  width: 100px;
+  animation: spin 1s linear infinite;
   background: linear-gradient(to bottom, rgb(254, 0, 1) 50%, white 50%);
   border-radius: 50%;
   border: 8px solid black;
-  animation: spin 1s linear infinite;
+  height: 100px;
+  position: relative;
+  width: 100px;
 }
 
 .pokemon::before {
-  content: "";
-  position: absolute;
-  height: 8px;
-  width: 85px;
   background: black;
+  content: "";
+  height: 8px;
+  position: absolute;
   top: 43px;
   transform: translatey(-50%);
+  width: 85px;
 }
 
 .pokemon::after {
-  content: "";
-  position: absolute;
-  height: 38px;
-  width: 38px;
-  border-radius: 50%;
   background: white;
-  top: 44px;
-  left: 42px;
-  transform: translate(-50%, -50%);
+  border-radius: 50%;
   box-shadow: inset 0 0 0 8px black, inset 0 0 0 10px white,
     inset 0 0 0 12px black;
+  content: "";
+  height: 38px;
+  left: 42px;
+  position: absolute;
+  top: 44px;
+  transform: translate(-50%, -50%);
+  width: 38px;
 }
 
 /* Spin Animation */
