--- a/src/pages/ProductDetail/ProductDetail.module.css
+++ b/src/pages/ProductDetail/ProductDetail.module.css
@@ -1,14 +1,14 @@
 .container {
+  margin-inline: auto;
   padding: 2.5rem;
   width: 90%;
-  margin-inline: auto;
 }
 
 .product-section {
   display: flex;
+  gap: 2rem;
   justify-content: center;
   margin-bottom: 2rem;
-  gap: 2rem;
 }
 
 .product-img-container {
@@ -24,8 +24,8 @@
 }
 
 .product-info-container {
-  width: 40%;
   padding: 1rem;
+  width: 40%;
 }
 
 .product-manufacturer {
@@ -35,18 +35,43 @@
 
 .product-price {
   font-size: 20px;
-  margin-bottom: 1rem;
   font-weight: 600;
+  margin-bottom: 1rem;
 }
 
 .add-to-cart-container {
-  display: flex;
   align-items: center;
+  display: flex;
+}
+
+.quantity-btn-container {
+  align-items: center;
+  display: flex;
+  width: 40%;
 }
 
 .add-to-cart-btn {
-  width: 30%;
-  margin-left: 2rem;
+  font-size: 14px;
+  width: 40%;
+}
+
+.out-of-stock-btn {
+  background-color: #e7e7e7;
+  font-size: 14px;
+  width: 40%;
+}
+
+.out-of-stock-btn a {
+  background-color: #e7e7e7;
+  cursor: default;
+}
+
+.out-of-stock-btn a:hover::after {
+  box-shadow: none;
+}
+
+.out-of-stock-btn a::after {
+  box-shadow: none;
 }
 
 .add-to-cart-container a {
@@ -54,12 +79,13 @@
 }
 
 .count-container {
-  flex: 0.2;
   text-align: center;
+  width: 20%;
+  margin: 0;
 }
 
 .count-btn {
-  width: 10%;
+  width: 25%;
 }
 
 .details-container {
