Se agrega el cart context y el compontente de cart buttons

--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -7,7 +7,7 @@
 }
 
 .brand {
-  font-family: "Bubblegum Sans", cursive;
+  font-family: 'Bubblegum Sans', cursive;
   font-size: 2rem;
   margin-right: 2rem;
   padding-top: 0.5rem;
