--- a/src/components/Loading/Loading.module.css
+++ b/src/components/Loading/Loading.module.css
@@ -1,10 +1,8 @@
 .container {
-  align-items: center;
   display: flex;
-  height: 100%;
   justify-content: center;
-  margin: 0;
-  width: 100%;
+  align-items: center;
+  height: 100%;
 }
 
 .pokemon {
@@ -19,7 +17,7 @@
 
 .pokemon::before {
   background: black;
-  content: "";
+  content: '';
   height: 8px;
   position: absolute;
   top: 43px;
@@ -30,9 +28,11 @@
 .pokemon::after {
   background: white;
   border-radius: 50%;
-  box-shadow: inset 0 0 0 8px black, inset 0 0 0 10px white,
+  box-shadow:
+    inset 0 0 0 8px black,
+    inset 0 0 0 10px white,
     inset 0 0 0 12px black;
-  content: "";
+  content: '';
   height: 38px;
   left: 42px;
   position: absolute;
